--- a/style.css
+++ b/style.css
@@ -1,3 +1,16 @@
 *{
     font-family: fantasy;
 }
+
+.navbar-brand{
+    font-size: 40px;
+
+}
+nav{
+    margin: 0px;
+}
+nav button {
+    height: auto;
+    width:auto;
+    margin: 0px;
+}
